webcert/src/main/webapp/css/inera-webcert.css
/* ... */
.btn-info:hover {
  background-color: #38c4d4;
}

.btn-info[disabled]:hover {
  cursor: arrow;
	background-color: #28b4c4;
/*  opacity: .5; /* Standards Compliant Browsers */
  filter: alpha(opacity=50); /* IE 7 and Earlier */
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);*/	
} 

.btn-link {
	color: #008391;
}

.btn-link:hover {
	color: #31b2be;
}

.btn-link-link {
    border: 0;
    margin: 0;
    padding: 0;
}

.btn-inverse {
	background: none;
	background-color: #3f3f3f;
  padding: 10px 35px;
}

.btn-block {
  padding-top: 10px;
  padding-bottom: 10px;
}

.btn-inverse:hover {
	background-color: #656565;
}

.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus, .dropdown-submenu:hover > a, .dropdown-submenu:focus > a {
  background: none;
  background-color: #28b4c4;
}

.dropdown-menu-center {
	left: -23%;
}

input[type="radio"], input[type="checkbox"] {
  margin: 0px 0 0;
}

.navbar {
	margin: 0;
}

.navbar-inner {
    padding: 0;
    padding-left: 30px;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
    border: 0;
    border-top: 2px solid #d4d4d4;
    border-bottom: 2px solid #d4d4d4;
}

.navbar .divider-vertical {
    margin: 0;
}

.nav-tabs.nav-stacked {
   /* outline: none;*/
}

.navbar .nav {
    margin: 0 0px 0 0;
}

.navbar .nav>li {
	border-left: 1px solid #999;
  border-right: 1px solid #999;
}

.navbar .nav>li>a {
    padding: 10px 25px 10px;
}

.nav-stacked > .active > a, .nav-stacked > .active > a:hover, .nav-stacked > .active > a:focus {
color: #ffffff;
text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
background-color: #008391;
}

.nav-stacked .active .icon-chevron-right, .nav-stacked .active a:hover .icon-chevron-right {
background-image: url(../img/glyphicons-halflings-white.png);
opacity: 1;
}

.nav-stacked .icon-chevron-right {
float: right;
margin-top: 2px;
margin-right: -6px;
opacity: .25;
}


.table-qa {
  border-collapse:separate;
  border-spacing: 0 8px;
}
/*
.table-qa th:last-child, .table-qa td:last-child {
  text-align: center;
}
*/
.table-qa tr > th {
  border: 0;
  padding: 0px 15px 0 0px;
}

.table-qa tr > td {
/*  border: 0;*/
  padding: 0px 20px 0 0px;
  background-color: #e5e5e5;
}

/*
.table-hover tbody tr:hover > td, .table-hover tbody tr:hover > th {
background-color: transparent;
}*/
/*
.table-qa tr:hover > td:not(.table-qa-nostyle) {
  background: none;
  background-color: #28b4c4;
  cursor: pointer;
}

.table-qa tr > td a {
    color: #008391;
}
*/
.table-qa tr td:first-child {
    -moz-border-radius: 3px 0 0 3px;
    -webkit-border-radius: 3px 0 0 3px;
    border-radius: 3px 0 0 3px;
}

.table-qa tr td.table-qa-last {
    -moz-border-radius: 0 3px 3px 0;
    -webkit-border-radius: 0 3px 3px 0;
    border-radius: 0 3px 3px 0;
    padding: 0;
}

.table-qa tr td:only-child {
    -moz-border-radius: 3px 3px 0 0;
    -webkit-border-radius: 3px 3px 0 0;
    border-radius: 3px 3px 0 0;
}
/*
.table-qa td.table-qa-nostyle {
	background:none;
}*/

.table-striped tbody > tr:nth-child(odd) > td {
background-color: #f9f9f9;
}

.table-striped tbody > tr:nth-child(odd) > th { background: none; }

th.center, td.center { text-align: center; }

.table-qa .btn-info, .table-qa .btn-success { padding: 7px 15px; }

.table-qa tr > td.nopadding { padding: 0; }

.marked { color: #ff4565; }

.scrollable {
    overflow-x:auto;
}

.no-padding {
    padding: 0;
}

textarea {
	width: 75%;
	min-width: 200px;
}

/**
 Directive(s) css
**/
.wc-spinner {
	text-align: center;
	padding: 20px;
}
.wc-spinner p {
	text-align: center; 
	color: #64ABC0; 
	margin-top: 20px;
}

